# MPI-Bash

./: .gitignore  INSTALL.md  LICENSE.md  Makefile.am  Makefile.in  README.md  config.h.in  configure.ac  mpibash.in  shell.c
builtins/: Makefile.in  circle.def  mpi.def
commands/: Makefile.am  mbcp  mbcp.1  mbcp.in  mbtar  mbtar.1  mbtar.in  mbxz  mbxz.1  mbxz.in
examples/: Makefile.am  pingpong  testcircle  testmpi
src/: Makefile.am  circle-ckpt.c  circle-init.c  circle-opts.c  circle-queue.c  circle-reduce.c  circlebash.h  coll.c  init.c  mpibash.h  preload-mpi.c  pt2pt.c  util.c
