###################################
# Install MPI-Bash examples       #
#                                 #
# By Scott Pakin <pakin@lanl.gov> #
###################################

EXAMPLES = \
	testmpi \
	testcircle \
	pingpong

examplesdir = $(docdir)/examples
examples_SCRIPTS = $(EXAMPLES)
EXTRA_DIST = $(EXAMPLES)
