###################################
# Install MPI-Bash examples       #
#                                 #
# By Scott Pakin <pakin@lanl.gov> #
###################################

examplesdir = $(docdir)/examples
dist_examples_SCRIPTS = testmpi pingpong
if HAVE_LIBCIRCLE
  dist_examples_SCRIPTS += testcircle
endif
